--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -29,7 +29,10 @@
                         <h4>Quote Generator</h4>
                     </div>
                     <div class="col-12 d-flex justify-content-center box-q ">
-                        <span class="quote p-3" id="quote">Press The Button</span>
+                        <span class="quote p-4" id="quote">Press The Button</span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-end box-q ">
+                        <span class="author p-3" id="author"></span>
                     </div>
                     <div class="col-12 d-flex justify-content-center mt-4 mb-3">
                         <button class="btn btn-main" id="btn">Generate</button>
